...
        ),
        ValueListenableBuilder<VideoPlayerValue>(
          valueListenable: controller,
          builder: (c, v, _) => Row(
            children: [
              IconButton(
                tooltip: v.isPlaying ? '暂停' : '播放',
                onPressed: widget.disabled
                    ? null
                    : () async {
                        if (v.isPlaying) {
                          await controller.pause();
                        } else {
...
