...
  Widget build(BuildContext context) => ListenableBuilder(
    listenable: Listenable.merge([
      widget.state,
      if (widget.updates != null) widget.updates!,
    ]),
    builder: (context, _) => Scaffold(
      appBar: AppBar(title: Text(['赛赛工具箱', '全部工具', '我的收藏', '设置'][tab])),
      body: Row(
        children: [
          if (desktop && MediaQuery.sizeOf(context).width >= 800) ...[
            NavigationRail(
              extended: MediaQuery.sizeOf(context).width >= 1100,
              selectedIndex: tab,
...
